@@ -12,8 +12,11 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
-#include "mol.h"
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
+
+#include "mol.h"
 
 using namespace std;
 
