@@ -17,7 +17,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
 
 #include "mol.h"
 #include "molvector.h"
@@ -26,7 +28,6 @@ GNU General Public License for more details.
 #include "typer.h"
 #include "rotor.h"
 #include "binary.h"
-#include "babelconfig.h"
 #include "data.h"
 
 #include <stdio.h>
