@@ -18,7 +18,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
 
 #ifndef OB_MOL_H
 #define OB_MOL_H
