@@ -17,7 +17,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.
 ***********************************************************************/
 
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
 
 #if HAVE_IOSTREAM
 #include <iostream>
