@@ -17,7 +17,10 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
+
 #include "mol.h"
 #include "obutil.h"
 #include "parsmart.h"
