@@ -26,7 +26,9 @@ obtained in part or whole from RasMol2 by Roger Sayle.
 // File Includes
 ///////////////////////////////////////////////////////////////////////////////
 
+#if HAVE_CONFIG_H
 #include "babelconfig.h"
+#endif
 
 #if HAVE_IOSTREAM
 #include <iostream>
